icons correct sizes
icons are not too small anymore

--- a/src/sass/components/_headerHome.scss
+++ b/src/sass/components/_headerHome.scss
@@ -144,8 +144,8 @@
 }
 
 .icon {
-    width: 1em;
-    height: 1em;
+    width: 32px;
+    height: 32px;
     stroke-width: 0;
     fill: #FFFFFF;
     cursor: pointer;
